fixed layout issue

--- a/src/layout-page/layout-page.less
+++ b/src/layout-page/layout-page.less
@@ -17,4 +17,8 @@
 .layout-page-view {
 	display: flex;
 	order: 1;
+	
+	& > * {
+		display: flex;
+	}
 }
